--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
             <img src="/images/self-portifolio.jpeg" alt="Foto de Eduardo Fonseca Ribeiro">
         </div>
         <div class="intro-text">
-            <h2>Introdução</h2>
-            <p>Sou Eduardo Fonseca Ribeiro, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas na FATEC - Prof. Jessen Vidal. Atualmente estou no 3º semestre do curso, me interesso por tecnologia, e estou em busca de aprimoramento contínuo em áreas como desenvolvimento backend e inteligência artificial.</p>
+            <h2>Eduardo Fonseca Ribeiro</h2>
+            <p>Tenho 19 anos, moro em São José dos Campos e sou estudante de Análise e Desenvolvimento de Sistemas na FATEC - Prof. Jessen Vidal. Atualmente estou no 3º semestre do curso, me interesso por tecnologia, e estou em busca de aprimoramento contínuo em áreas como desenvolvimento backend e inteligência artificial.</p>
         </div>
     </div>
 </section>
