--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="/css/footer.css">
 
     <% if (page === 'index') { %>
-    <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet" href="/css/index.css">
     <% } else if (page === 'projetos') { %>
-    <link rel="stylesheet" href="/css/projetos.css">
+        <link rel="stylesheet" href="/css/projetos.css">
     <% } else if (page === 'curriculo') { %>
-    <link rel="stylesheet" href="/css/curriculos.css">
+        <link rel="stylesheet" href="/css/curriculos.css">
     <% } %>
 </head>
+
 <body>
     <header class="navbar">
         <div class="navbar-container">
-            <h1 class="logo">Eduardo Ribeiro</h1>
+            <h1 class="logo">Portifólio</h1>
             <nav class="nav-links">
                 <a href="/">Início</a>
                 <a href="/projetos">Projetos</a>
