--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2025 - Eduardo Ribeiro</p>
+        <p>&copy; <%= anoAtual || new Date().getFullYear() %> - Desenvolvido por <%= nome %></p>
     </footer>
 </body>
 </html>
