refatorando reader e footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-
-    </main>
-    <footer>
-        <p>&copy; <%= anoAtual || new Date().getFullYear() %> - Desenvolvido por <%= nome %></p>
-    </footer>
+        </main>
+        <footer>
+            <p>&copy; <%= anoAtual || new Date().getFullYear() %> - Desenvolvido por <%= nome %></p>
+        </footer>
+    </div>
 </body>
 </html>
