--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,18 +13,21 @@
         <link rel="stylesheet" href="/css/projetos.css">
     <% } else if (page === 'curriculo') { %>
         <link rel="stylesheet" href="/css/curriculos.css">
+    <% } else if (page === 'login') { %>
+        <link rel="stylesheet" href="/css/login.css">
     <% } %>
 </head>
 
 <body>
-    <header class="navbar">
-        <div class="navbar-container">
-            <h1 class="logo">Portifólio</h1>
-            <nav class="nav-links">
-                <a href="/">Início</a>
-                <a href="/projetos">Projetos</a>
-                <a href="/curriculo">Currículo</a>
-            </nav>
-        </div>
-    </header>
-    <main>
+    <div class="page-container">
+        <header class="navbar">
+            <div class="navbar-container">
+                <h1 class="logo">Portifólio</h1>
+                <nav class="nav-links">
+                    <a href="/">Início</a>
+                    <a href="/projetos">Projetos</a>
+                    <a href="/curriculo">Currículo</a>
+                </nav>
+            </div>
+        </header>
+        <main>
