--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,7 +1,10 @@
+/* Footer atualizado */
 footer {
     text-align: center;
     background-color: #1e2a38;
     color: #fff;
     padding: 1em 0;
-    margin-top: 2em;
+    margin-top: auto;
+    font-size: 0.9em;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
 }
